fixed navbar on iphone5

--- a/styles.css
+++ b/styles.css
@@ -176,6 +176,11 @@ section.exp > div {
 }
 
 @media screen and (max-width: 800px) {
+  .navbar a {
+    font-size: 0.75rem;
+    margin-left: 8vw;
+  }
+
   .exp-container {
     width: 100%; /* The width is 100%, when the viewport is 800px or smaller */
   }
